--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "keksik-vk-api": "^1.0.2",
     "nodemon": "^2.0.22",
-    "vk-io": "^4.8.1"
+    "vk-io": "^4.8.1",
+    "vk-io-question": "^3.1.1"
   }
 }
