--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cron": "^2.3.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "keksik-vk-api": "^1.0.2",
     "mysql2": "^3.3.5",
