keksik has been removed

--- a/config.json
+++ b/config.json
@@ -9,6 +9,9 @@
     "number_yoomoney": "+7 926 818 86 63",
 
     "link_keksik": "https://m.vk.com/app6887721_-198772463",
+    "code_keksik": "123cc",
+
+
     "min_withdrawal": 100,
 
     "mysql_object": {
